api/src/routes/snapshots/nightlio_api__routes__achievements__tests__get_achievements_empty.snap
---
source: src/routes/achievements.rs
expression: "json!({ \"status\": status.as_u16(), \"body\": body })"
---
{
  "body": [],
  "status": 200
}
