api/src/routes/snapshots/nightlio_api__routes__achievements__tests__get_achievements_invalid_token.snap
---
source: src/routes/achievements.rs
expression: "json!({ \"status\": status.as_u16(), \"body\": body })"
---
{
  "body": {
    "error": "Invalid token"
  },
  "status": 401
}
