api/src/routes/snapshots/nightlio_api__routes__achievements__tests__get_achievements_progress_seeded.snap
---
source: src/routes/achievements.rs
expression: "json!({ \"status\": status.as_u16(), \"body\": body })"
---
{
  "body": {
    "consistency_king": {
      "current": 7,
      "max": 30
    },
    "data_lover": {
      "current": 10,
      "max": 10
    },
    "first_entry": {
      "current": 1,
      "max": 1
    },
    "mood_master": {
      "current": 7,
      "max": 100
    },
    "week_warrior": {
      "current": 7,
      "max": 7
    }
  },
  "status": 200
}
