api/src/routes/snapshots/nightlio_api__routes__achievements__tests__options_achievements_progress_slash.snap
---
source: src/routes/achievements.rs
expression: "json!({ \"status\": status.as_u16(), \"body\": body })"
---
{
  "body": "",
  "status": 204
}
