api/src/routes/snapshots/nightlio_api__routes__achievements__tests__post_achievements_check_empty.snap
---
source: src/routes/achievements.rs
expression: "json!({ \"status\": status.as_u16(), \"body\": body })"
---
{
  "body": {
    "count": 0,
    "new_achievements": []
  },
  "status": 200
}
