api/src/routes/snapshots/nightlio_api__routes__achievements__tests__post_achievements_check_unauth.snap
---
source: src/routes/achievements.rs
expression: "json!({ \"status\": status.as_u16(), \"body\": body })"
---
{
  "body": {
    "error": "Authorization header required"
  },
  "status": 401
}
